# python-biella-example

./: .gitlab-ci.yml  README.md  bitbucket-pipelines.yml  example.py  pyproject.toml  tox.ini
.github/workflows/: pipeline.yml
