[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[project]
name = "example"
version = "0.1.0"
description = "Python Biella example"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Python Biella", email = "biella@python.it"},
]
requires-python = ">=3.9"
dependencies = []

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["example"]

[tool.pytest.ini_options]
addopts = "--color=yes --doctest-modules --junitxml=junit.xml --verbose"

[tool.ruff]
extend-exclude = []
extend-include = []

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = ["ANN", "D", "FBT002", "INP001", "Q000", "TRY200", "UP"]
